<resources>

    <!-- App strings -->
    <string name="app_name">LumensTorch</string>

    <!-- Items strings -->
    <string name="aplicar">Aplicar a:</string>
    <string name="lumens">lm</string>
    <string name="sensor_disponible">(Sensor de luz disponible)</string>
    <string name="sensor_no_disponible">(Sensor de luz no disponible)</string>
    <string name="luz">Lectura sensor: </string>
    <string name="lm_torch">LUMENS TORCH</string>
    <string name="luz_automatica">Luz automatica</string>
    <string name="text_color_selector">Selecciona el color para la iluminación</string>
    <string name="texto_indicativo">Selector de sensibilidad del sensor</string>
    <string name="cambiar_flash">Flash</string>
    <string name="cambiar_pantalla">Pantalla</string>

    <!-- AdMob strings -->
                <!-- Release -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-5257404653920985~7692796617</string>-->
                <!-- Debug/test -->
    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->

</resources>