<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="false"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/large_margin"
    android:paddingLeft="@dimen/large_margin"
    android:paddingRight="@dimen/large_margin"
    android:paddingTop="@dimen/large_margin"
    tools:context="example.org.lumenstorch.BackTorch">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/lm_torch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".BackTorch" />

    <ImageView
        android:id="@+id/toggle_front_back_flash"
        android:layout_width="@dimen/torch_button_width"
        android:layout_height="@dimen/torch_button_height"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:src="@drawable/linterna_frontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/linterna_frontal" />

    <ImageView
        android:id="@+id/main_button"
        android:layout_width="@dimen/main_button"
        android:layout_height="@dimen/main_button"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen_desbloqueado" />

    <LinearLayout
        android:id="@+id/backLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/automatic"
                style="@style/main_activity_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="@string/luz_automatica" />

            <TextView
                android:id="@+id/muestrabarra"
                style="@style/main_activity_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1 "
                android:gravity="center"
                tools:text="@string/aplicar" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/color_selector"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/selector_bar_height"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LIGHT_available"
                style="@style/main_activity_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="60"
                android:gravity="center"
                tools:text="@string/sensor_disponible" />

            <TextView
                android:id="@+id/LIGHT_reading"
                style="@style/main_activity_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="40"
                tools:text="@string/luz" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
